--- a/pwa/package.json
+++ b/pwa/package.json
@@ -8,14 +8,14 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.44",
     "@sveltejs/kit": "next",
-    "svelte": "^3.44.0"
+    "sass": "^1.49.0",
+    "svelte": "^3.44.0",
+    "svelte-preprocess": "^4.10.2"
   },
   "type": "module",
   "dependencies": {
-    "@sveltejs/adapter-netlify": "^1.0.0-next.44",
-    "sass": "^1.49.0",
-    "svelte-preprocess": "^4.10.2"
+    "socket.io-client": "^4.4.1"
   }
 }
